# AED-ScheduleManager

./: .$diagram.drawio.bkp  .$diagram.drawio.dtmp  .gitignore  CMakeLists.txt  README.md  aula.cpp  aula.h  cadeira.cpp  cadeira.h  course.cpp  course.h  diagram.drawio  estudante.cpp  estudante.h  lesson.cpp  main.cpp  mainpage.dox  mytime.cpp  mytime.h  poleandro  projAED2.pptx  studentGroup.cpp  studentGroup.h  tempo.cpp  tempo.h  time.cpp  time.h  turma.cpp  turma.h
data/: InvalidRequests.csv  students_classes.csv  students_classes_updated.csv
data2/: students_classes.csv
docs/: Doxyfile  header.html
docs/html/: _add_request_8h.html  _add_request_8h.js  _add_request_8h__dep__incl.map  _add_request_8h__dep__incl.md5  _add_request_8h__incl.map  _add_request_8h__incl.md5  _add_request_8h_source.html  _control_unit_8h.html  _control_unit_8h.js  _control_unit_8h__dep__incl.map  _control_unit_8h__dep__incl.md5  _control_unit_8h__incl.map  _control_unit_8h__incl.md5  _control_unit_8h_source.html  _menu_8h.html  _menu_8h__incl.map  _menu_8h__incl.md5  _menu_8h_source.html  _remove_request_8h.html  _remove_request_8h.js  _remove_request_8h__dep__incl.map  _remove_request_8h__dep__incl.md5  _remove_request_8h__incl.map  _remove_request_8h__incl.md5  _remove_request_8h_source.html  _request_8h.html  _request_8h.js  (+299 more)
src/: AddRequest.cpp  AddRequest.h  ControlUnit.cpp  ControlUnit.h  Menu.cpp  Menu.h  RemoveRequest.cpp  RemoveRequest.h  Request.h  Schedule.cpp  Schedule.h  SwitchRequest.cpp  SwitchRequest.h  course.cpp  course.h  lesson.cpp  lesson.h  lessontime.cpp  lessontime.h  student.cpp  student.h  studentGroup.cpp  studentGroup.h  time.cpp  time.h
(+198 files in other folders)
